post request on widget config Save

--- a/webroot/reports/udd/data/default.config.json
+++ b/webroot/reports/udd/data/default.config.json
@@ -13,8 +13,7 @@
       },
       "contentConfigView": {
         "view": "LineChartConfigView",
-        "viewPathPrefix": "reports/udd/ui/js/views/widgets/",
-        "viewConfig": {}
+        "viewPathPrefix": "reports/udd/ui/js/views/widgets/"
       }
     }
   },
