--- a/webroot/reports/udd/data/default.config.json
+++ b/webroot/reports/udd/data/default.config.json
@@ -31,6 +31,12 @@
       "contentView": {
         "view": "LogsView",
         "viewPathPrefix": "reports/udd/ui/js/views/"
+      },
+      "contentConfigView": {
+        "view": "LogsConfigView",
+        "viewPathPrefix": "reports/udd/ui/js/views/contentConfigs/",
+        "model": "LogsConfigModel",
+        "modelPathPrefix": "reports/udd/ui/js/models/contentConfigs/"
       }
     }
   },
